# NARAD

./: .gitignore  README.md  Social reddit.py  add_coordinates.py  app.py  complaint_data.json  complaint_data_with_coords.json  folder_structure.txt  main.py  requirements.txt
narad-web/: index.html  package-lock.json  package.json  style.css
narad-web/src/: main.js  router.js
narad-web/src/pages/: complaints.js  dashboard.js  landing.js  login.js  map.js  notices.js
voice/: .env.example  .gitignore  complaint_data.json  complaint_data_with_coords.json  pyproject.toml  requirements.txt  temp.json
voice/rag/: build_index.py  build_kcc_index.py  retriever.py  search.py
voice/rag/index/: metadata.json
voice/src/: Social_reddit.py  agent.py  api.py  app.py  narad_tester.html  router.py  voice.html
voice/tests/: test_ngrok.py
